Update ApplicationConfiguration.java